# Soft-FPGA-Reversi

./: .gitignore  CLAUDE.md  README.md
doc/: 01-hardware.puml  01-構成図.md  02-software.puml  02-準備.md  03-テスト戦略.md  04-Docker構成.md  05-進捗メモ.md  06-ホストビルド.md
docker/: Dockerfile  compose.yml
etc/: architecture.md  lessons-learned.md  protocol.md
firmware/: CMakeLists.txt  README.md
firmware/src/: cxx_minimal.cpp  main.cpp  proto.cpp  proto.h  stub_mutex.h
firmware/src/verilator-runtime/: verilated.cpp
firmware/src/verilib/: verilated.cpp
host/: CMakeLists.txt  main.cpp
rtl/: README.md  coord.v  flip_calc.v  game_state.v  legal_bb.v  othello_top.v  pick_lsb.v  proto.v
scripts/: _build-host-inner.sh  build-host.sh  build-pico.sh  flash.sh  serial.sh  wsl-attach.sh
verif/: README.md
verif/golden/: reversi_rules.py
verif/tb_hil/: README.md  conftest.py  pytest.ini  test_hello_uf2.py  test_proto.py  test_scenario.py
verif/tb_unit/: Makefile  requirements.txt  test_othello_top.py  test_proto.py
verif/tb_unit/coord/: Makefile  test_coord.py
verif/tb_unit/flip_calc/: Makefile  test_flip_calc.py
verif/tb_unit/game_state/: Makefile  test_game_state.py
verif/tb_unit/legal_bb/: Makefile  test_legal_bb.py
verif/tb_unit/pick_lsb/: Makefile  test_pick_lsb.py
verif/tb_unit/proto/: Makefile  test_proto.py
